--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/css/PerformancePanel.css
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/css/PerformancePanel.css
@@ -7,6 +7,7 @@
         
         > .metricValue {
             min-width: 5em;
+            display: inline-block;
             text-align: right;
         }
         
